tests/parser/parse-while.3.bad.error
error: Malformed while expression
  --> test:4:24
   |
 4 |  (define f (while :label))
   |                         ^ expected condition
