tests/parser/parse-while.3.bad.coalton
;; BAD: Parse While
(package test-parser)

(define f (while :label))
